[gd_scene load_steps=11 format=3 uid="uid://bxprx5o6e4dtl"]

[ext_resource type="Script" uid="uid://svysgd1wlsdf" path="res://Scripts/DataResources/Weapons/Advanced/Effect Scripts/EldritchOrb.gd" id="1_x3afp"]
[ext_resource type="Texture2D" uid="uid://by708l65e4ftf" path="res://Assets/Pets and Summons/Summoner/Eldritch Orb Animation.png" id="2_ph2bh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jaq4d"]
atlas = ExtResource("2_ph2bh")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyjd2"]
atlas = ExtResource("2_ph2bh")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_052in"]
atlas = ExtResource("2_ph2bh")
region = Rect2(500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4tky"]
atlas = ExtResource("2_ph2bh")
region = Rect2(750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3rbw"]
atlas = ExtResource("2_ph2bh")
region = Rect2(1000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3128"]
atlas = ExtResource("2_ph2bh")
region = Rect2(1250, 0, 250, 250)

[sub_resource type="SpriteFrames" id="SpriteFrames_t1xbd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaq4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyjd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_052in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4tky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3rbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3128")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sdre8"]
radius = 128.658

[node name="EldritchOrb" type="Area2D"]
collision_layer = 0
collision_mask = 128
script = ExtResource("1_x3afp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t1xbd")
autoplay = "default"
frame_progress = 0.924953

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sdre8")

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[node name="PulseTimer" type="Timer" parent="."]
